--- a/TravelersPin/Base.lproj/LaunchScreen.storyboard
+++ b/TravelersPin/Base.lproj/LaunchScreen.storyboard
@@ -16,8 +16,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="u3U-p3-De8">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                            </imageView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.52941176469999995" green="0.57647058819999997" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="u3U-p3-De8" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8nP-F9-ogv"/>
+                            <constraint firstItem="u3U-p3-De8" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="RCF-dJ-PNh"/>
+                            <constraint firstItem="u3U-p3-De8" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="bfn-Qf-HCz"/>
+                            <constraint firstAttribute="trailing" secondItem="u3U-p3-De8" secondAttribute="trailing" id="tGu-jL-8CA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,4 +37,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launch Screen" width="375" height="667"/>
+    </resources>
 </document>
