--- a/TravelersPin/Base.lproj/Main.storyboard
+++ b/TravelersPin/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="oeQ-nZ-ndU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="O26-ch-47i">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
@@ -28,7 +28,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="133"/>
                                             <animations/>
                                         </imageView>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JQV-52-k3u" customClass="RatingControl" customModule="TravelersPin" customModuleProvider="target">
+                                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JQV-52-k3u" customClass="RatingControl" customModule="TravelersPin" customModuleProvider="target">
                                             <rect key="frame" x="8" y="81" width="240" height="44"/>
                                             <animations/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -287,11 +287,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <animations/>
                             </imageView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XX4-gb-h8s">
-                                <rect key="frame" x="0.0" y="85" width="600" height="430"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XX4-gb-h8s">
+                                <rect key="frame" x="0.0" y="108" width="600" height="430"/>
                                 <animations/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="430" id="mUv-T1-GzP"/>
+                                    <constraint firstAttribute="height" constant="430" id="PHG-S3-468"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="10" id="cdw-FO-ggs">
                                     <size key="itemSize" width="250" height="380"/>
@@ -311,38 +311,25 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="250" height="380"/>
                                                     <animations/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYD-m2-PaO">
-                                                    <rect key="frame" x="101" y="88.5" width="58.5" height="31.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYD-m2-PaO">
+                                                    <rect key="frame" x="8" y="88" width="234" height="31.5"/>
                                                     <animations/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="23"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zo-Qh-45r">
-                                                    <rect key="frame" x="113.5" y="122" width="33" height="18"/>
-                                                    <animations/>
-                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgY-m4-fLN">
-                                                    <rect key="frame" x="202" y="8" width="40" height="40"/>
-                                                    <animations/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="FoZ-Q0-ohB"/>
-                                                        <constraint firstAttribute="width" constant="40" id="HyR-pW-2Lr"/>
-                                                    </constraints>
-                                                    <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <state key="normal" image="heart"/>
-                                                    <connections>
-                                                        <action selector="favoriteButtonTapped:" destination="WL9-vr-Q0c" eventType="touchUpInside" id="AHJ-du-Z9r"/>
-                                                    </connections>
-                                                </button>
                                                 <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" placeholderIntrinsicWidth="250" placeholderIntrinsicHeight="44" translatesAutoresizingMaskIntoConstraints="NO" id="Oc3-sl-E3q" customClass="RatingControl" customModule="TravelersPin" customModuleProvider="target">
                                                     <rect key="frame" x="5" y="336" width="240" height="44"/>
                                                     <animations/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zo-Qh-45r">
+                                                    <rect key="frame" x="8" y="127.5" width="234" height="18"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="13"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <animations/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -353,17 +340,17 @@
                                             <constraint firstItem="Oc3-sl-E3q" firstAttribute="leading" secondItem="WL9-vr-Q0c" secondAttribute="leading" constant="5" id="2JK-ta-2ft"/>
                                             <constraint firstItem="3wz-Fj-u62" firstAttribute="top" secondItem="WL9-vr-Q0c" secondAttribute="top" id="8XZ-GA-7eQ"/>
                                             <constraint firstItem="Oc3-sl-E3q" firstAttribute="top" secondItem="3wz-Fj-u62" secondAttribute="bottom" id="E1y-j0-w4u"/>
+                                            <constraint firstItem="oYD-m2-PaO" firstAttribute="top" secondItem="WL9-vr-Q0c" secondAttribute="topMargin" constant="80" id="IVd-PQ-ysQ"/>
                                             <constraint firstAttribute="trailing" secondItem="Oc3-sl-E3q" secondAttribute="trailing" constant="5" id="KTv-P5-hJ0"/>
                                             <constraint firstAttribute="trailing" secondItem="3wz-Fj-u62" secondAttribute="trailing" id="Lhq-YP-HLK"/>
-                                            <constraint firstItem="zgY-m4-fLN" firstAttribute="trailing" secondItem="WL9-vr-Q0c" secondAttribute="trailingMargin" id="Nc8-SV-I4y"/>
                                             <constraint firstAttribute="bottom" secondItem="Oc3-sl-E3q" secondAttribute="bottom" id="REP-ND-gRi"/>
-                                            <constraint firstItem="oYD-m2-PaO" firstAttribute="centerX" secondItem="3wz-Fj-u62" secondAttribute="centerX" constant="5.25" id="VNZ-O4-Epe"/>
+                                            <constraint firstItem="8Zo-Qh-45r" firstAttribute="leading" secondItem="WL9-vr-Q0c" secondAttribute="leadingMargin" id="X2y-9o-a5A"/>
+                                            <constraint firstItem="oYD-m2-PaO" firstAttribute="trailing" secondItem="WL9-vr-Q0c" secondAttribute="trailingMargin" id="aHd-nQ-RIq"/>
+                                            <constraint firstItem="8Zo-Qh-45r" firstAttribute="trailing" secondItem="WL9-vr-Q0c" secondAttribute="trailingMargin" id="fd1-ID-yz6"/>
+                                            <constraint firstItem="oYD-m2-PaO" firstAttribute="leading" secondItem="WL9-vr-Q0c" secondAttribute="leadingMargin" id="fwy-NS-zJQ"/>
                                             <constraint firstAttribute="bottom" secondItem="3wz-Fj-u62" secondAttribute="bottom" id="g3j-PA-mL4"/>
-                                            <constraint firstItem="zgY-m4-fLN" firstAttribute="top" secondItem="WL9-vr-Q0c" secondAttribute="topMargin" id="j0R-Yv-eQu"/>
-                                            <constraint firstItem="8Zo-Qh-45r" firstAttribute="top" secondItem="oYD-m2-PaO" secondAttribute="bottom" constant="2" id="jzZ-Rx-x2i"/>
-                                            <constraint firstItem="8Zo-Qh-45r" firstAttribute="centerX" secondItem="oYD-m2-PaO" secondAttribute="centerX" id="sSP-Jc-A4V"/>
+                                            <constraint firstItem="8Zo-Qh-45r" firstAttribute="top" secondItem="oYD-m2-PaO" secondAttribute="bottom" constant="8" id="oLR-9T-Z5t"/>
                                             <constraint firstItem="3wz-Fj-u62" firstAttribute="leading" secondItem="WL9-vr-Q0c" secondAttribute="leading" id="sfi-qY-l5Y"/>
-                                            <constraint firstItem="3wz-Fj-u62" firstAttribute="top" secondItem="oYD-m2-PaO" secondAttribute="bottom" constant="-120" id="zy5-RD-Pd4"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -372,7 +359,6 @@
                                         </variation>
                                         <connections>
                                             <outlet property="addressLabel" destination="8Zo-Qh-45r" id="ZYD-1i-0Em"/>
-                                            <outlet property="favoriteButton" destination="zgY-m4-fLN" id="20Y-XF-qcG"/>
                                             <outlet property="imageView" destination="3wz-Fj-u62" id="xRL-MB-d7p"/>
                                             <outlet property="nameLabel" destination="oYD-m2-PaO" id="VcB-RT-xSW"/>
                                             <outlet property="ratingControl" destination="Oc3-sl-E3q" id="80B-Xr-nfW"/>
@@ -388,23 +374,42 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="XX4-gb-h8s" firstAttribute="centerX" secondItem="eRV-qL-BRd" secondAttribute="centerX" id="K7A-Yv-Eh1"/>
+                            <constraint firstItem="XX4-gb-h8s" firstAttribute="leading" secondItem="eRV-qL-BRd" secondAttribute="leading" id="8pV-ur-Poz"/>
+                            <constraint firstAttribute="trailing" secondItem="XX4-gb-h8s" secondAttribute="trailing" id="Nki-tV-IUI"/>
+                            <constraint firstItem="XX4-gb-h8s" firstAttribute="top" secondItem="uXm-kL-w7m" secondAttribute="bottom" constant="44" id="RDK-ch-9Xm"/>
                             <constraint firstItem="dkX-j0-X47" firstAttribute="leading" secondItem="eRV-qL-BRd" secondAttribute="leading" id="SZp-bY-MjK"/>
+                            <constraint firstItem="XX4-gb-h8s" firstAttribute="centerX" secondItem="eRV-qL-BRd" secondAttribute="centerX" id="Snh-re-Veb"/>
                             <constraint firstItem="JaG-oM-uqY" firstAttribute="top" secondItem="dkX-j0-X47" secondAttribute="bottom" id="VyQ-eu-o7u"/>
                             <constraint firstItem="dkX-j0-X47" firstAttribute="top" secondItem="eRV-qL-BRd" secondAttribute="top" id="XMc-hd-Aa5"/>
+                            <constraint firstItem="XX4-gb-h8s" firstAttribute="centerY" secondItem="eRV-qL-BRd" secondAttribute="centerY" id="aCj-SH-KH0"/>
                             <constraint firstAttribute="trailing" secondItem="dkX-j0-X47" secondAttribute="trailing" id="cZt-Pc-kEf"/>
-                            <constraint firstItem="XX4-gb-h8s" firstAttribute="centerY" secondItem="eRV-qL-BRd" secondAttribute="centerY" id="d5R-Uo-bUe"/>
-                            <constraint firstAttribute="trailing" secondItem="XX4-gb-h8s" secondAttribute="trailing" id="mwV-JU-QGC"/>
-                            <constraint firstItem="XX4-gb-h8s" firstAttribute="leading" secondItem="eRV-qL-BRd" secondAttribute="leading" id="oBW-zN-Bx8"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Snh-re-Veb"/>
+                                <exclude reference="aCj-SH-KH0"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Discover Places" id="Ond-td-58e"/>
+                    <navigationItem key="navigationItem" title="Discover Places" id="Ond-td-58e">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="uOZ-Y3-hM4">
+                            <connections>
+                                <action selector="refreshAction:" destination="5Ij-bm-6Ha" id="QY9-2b-H8b"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="backgroundImageView" destination="dkX-j0-X47" id="y1g-o5-hWb"/>
                         <outlet property="collectionView" destination="XX4-gb-h8s" id="qZy-Je-Tdm"/>
+                        <outlet property="spinner" destination="BPw-qg-B5Y" id="Boz-2k-Fsv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wf7-mg-5wP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="BPw-qg-B5Y">
+                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <animations/>
+                </activityIndicatorView>
             </objects>
             <point key="canvasLocation" x="249" y="-733"/>
         </scene>
@@ -468,6 +473,5 @@
     </scenes>
     <resources>
         <image name="defaultPhoto" width="540" height="540"/>
-        <image name="heart" width="128" height="128"/>
     </resources>
 </document>
